# LiveFit

./: CMakeLists.txt  CMakeLists.txt.user.4e3c134  main.cpp  mainwidget.cpp  mainwidget.h  worker.cpp  worker.h
cmake/: app_utils.cmake
